# obsidian-fme

./: .gitignore  CHANGELOG.md  Cargo.toml  ISSUE-recursive-depth.md  PLAN-toml-migration.md  README.md  ship.sh
.beads/: events.jsonl
crates/clap_describe/: CHANGELOG.md  Cargo.toml  README.md
crates/clap_describe/src/: describe.rs  extract.rs  lib.rs  markdown.rs  model.rs
crates/clap_describe/tests/: edge_cases.rs  round_trip.rs  snapshot_json.rs  snapshot_markdown.rs
crates/clap_describe/tests/common/: mod.rs
crates/clap_describe/tests/snapshots/: command_with_subcommands.json  command_with_subcommands.md  empty_command.json  empty_command.md  positional_only.json  positional_only.md  realistic_command.json  realistic_command.md  with_extra_description.md
crates/md-fme/: Cargo.toml
crates/md-fme/src/: enforce.rs  frontmatter.rs  main.rs  model.rs  query.rs  toml_document.rs
crates/md-fme/src/render/: tree.rs
crates/md-fme/tests/: integration.rs  sr_ops.rs  toml_enforce.rs
crates/md-fme/tests/fixtures/: leetcode_datetime.md  leetcode_rich.md  simple_tags.md
crates/md-fme/tests/fixtures/sr/: sr_no_sr.md  sr_overdue.md
scripts/: helper.sh  local_ship.sh  publish.sh  release.sh
src/: display.rs  enforce.rs  frontmatter.rs  main.rs  query.rs  sr.rs
src/render/: json.rs  mod.rs
tests/: depth.rs  integration.rs  query_ops.rs  sr_ops.rs
tests/fixtures/: daily_log.md  fix_schema.toml  multiline_tags_with_scalar.md  query_ops_rich.md  query_ops_sparse.md  toml_frontmatter.md  workflow_inline_tags.md
tests/fixtures/sr/: sr_future.md
