[package]
name = "md-fme"
version = "0.8.1"
edition = "2024"
description = "CLI for Obsidian vault frontmatter validation, querying, and spaced repetition workflows"
license = "MIT"
repository = "https://github.com/ai-tools-all/obsidian-fme"
readme = "README.md"
keywords = ["obsidian", "frontmatter", "cli", "markdown", "spaced-repetition"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2"
chrono = "0.4"
colored = "2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
overflow-checks = false
