[workspace]
resolver = "2"
members = [
    "crates/md-fme",
    "crates/clap_describe",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ai-tools-all/obsidian-fme"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
overflow-checks = false
