[package]
name = "clap_describe"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Add --describe flag to clap subcommands for structured command schema output"
keywords = ["clap", "cli", "describe", "schema", "agent"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
