[package]
name = "md-fme"
version = "0.9.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Obsidian vault frontmatter validation, querying, and spaced repetition workflows"
readme = "../../README.md"
keywords = ["obsidian", "frontmatter", "cli", "markdown", "spaced-repetition"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_describe = { path = "../clap_describe" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2"
chrono = "0.4"
colored = "2"
